--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "minimist": "^1.2.5",
+    "patch-package": "^6.2.2",
     "react": "^16.12.0",
+    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
     "serialize-javascript": "^2.1.2"
   },
   "scripts": {
@@ -31,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^3.3.0",
+    "webpack-serve": "^3.2.0"
   }
 }
